terraform/accounts/681048796370/vpc/main.tf
# AWS Documentation: https://docs.aws.amazon.com/vpc/latest/userguide/VPC_Introduction.html

resource "aws_vpc" "main" {
  cidr_block       = var.vpc_cidr_block
  instance_tenancy = "default"
  enable_dns_support   = true
  enable_dns_hostnames = true

  tags = {
    Name = "${var.app_name}-vpc"
    ManagedBy = "Terraform"
  }
}
